--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "firebase": "^11.2.0",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.6",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
