--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.66.9",
     "cloudinary": "^2.5.1",
     "cookies-next": "^5.1.0",
     "firebase": "^11.2.0",
